2006-11-06 17:54  antirez

	* jim-aio.c: Jim-aio is now able to be statically linked with jim.c
	  on systems like eCos where there is no dynamic libraries support.

2006-11-05 01:26  antirez

	* ChangeLog, jim.c: {*} as alias for {expand} like in recent Tcl
	  8.5 versions

2006-11-02 23:39  antirez

	* ChangeLog: [no log message]

2006-11-02 23:38  antirez

	* ChangeLog, jim.c, jim.h: Ability to configure file descriptors
	  for standard input, output, error.  Default is
	  stdin,stdout,stderr but it's possible to change the default after
	  creating the interpreter using Jim_(Set|Get)(Stdin|Stdout|Stderr)
	  if needed.

2006-11-02 00:31  antirez

	* AUTHORS, ChangeLog: Minor doc typo

2006-11-01 18:18  antirez

	* ChangeLog, jim.c: Minor change to (hopefully) avoid a warning
	  with some (non-gcc) compiler.

2006-11-01 17:03  antirez

	* ChangeLog, jim.c: Fixed error message when trying to access a non
	  existing key in dictionary

2006-11-01 14:37  antirez

	* jim.c, jim.h: Fix to expr parsing (now hex digits work as
	  literals).  the exit command is now implemented as a special
	  return value of JIM_EXIT.

2005-09-19 17:56  antirez

	* ChangeLog, jim-eventloop.c: Fixed a bug reported by Craig Denson
	  about jim-eveloop.c and filemasks.

2005-09-19 17:47  antirez

	* BUGS, ChangeLog, jim.c: Updated BUGS, fixed some minor problem
	  with GCC 4.x compilation.

2005-09-19 16:17  antirez

	* doc/Sqlite-Extension.txt: Added info about in-memory databases in
	  the Sqlite extension doc.

2005-04-26 15:31  patthoyts

	* jim-win32.c: Check available windows target version for more
	  things.

2005-04-26 12:47  antirez

	* ChangeLog, Makefile, jim-win32.c: mingw compilation fix
	  (excluding the compilation of animate window win32 cmd)

2005-04-21 09:35  patthoyts

	* jim-win32.c: RegisterClass, CreateWindow and UpdateWindow. Need
	  to add user defined Window procedures though.

2005-04-20 17:34  patthoyts
